# CHARM

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
configs/: balinese.yaml  base.yaml  dunhuang.yaml
docs/: DATA_FORMAT.md  RELEASE_CHECKLIST.md  REPRODUCIBILITY.md
scripts/: audit_release.py  prepare_archive.py  triangulate_multiview.py
src/charm/: __init__.py  cli.py  config.py  data.py  density.py  losses.py  metrics.py  preprocessing.py  retrieval.py  runtime.py
src/charm/models/: __init__.py  diffusion.py  representation.py
tests/: test_cli.py  test_config.py  test_data.py  test_density.py  test_metrics_retrieval.py  test_models.py  test_preprocessing.py
