[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "charm-motion"
version = "0.1.0"
description = "Implementation of CHARM and the Canonical Style Centrality Score"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Anonymous"},
]
dependencies = [
  "numpy>=1.26",
  "PyYAML>=6.0",
  "torch>=2.2",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
charm-make-splits = "charm.cli:make_splits_main"
charm-train-representation = "charm.cli:train_representation_main"
charm-fit-reference = "charm.cli:fit_reference_main"
charm-train-generator = "charm.cli:train_generator_main"
charm-evaluate = "charm.cli:evaluate_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
